@@ -1,5 +1,11 @@
 2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Renamed member variables
+	* src/BtAbortOutstandingRequestEvent.h
+	* src/BtCancelSendingPieceEvent.h
+
+2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Renamed member variable
 	* src/BitfieldMan.cc
 	* src/BitfieldMan.h
